--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -3,7 +3,15 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:pathData="M17.598,15.478H16.486L16.092,15.098C16.972,14.076 17.615,12.873 17.975,11.575C18.335,10.276 18.404,8.913 18.176,7.585C17.514,3.674 14.248,0.551 10.307,0.072C8.921,-0.103 7.513,0.041 6.192,0.493C4.87,0.945 3.67,1.693 2.682,2.681C1.694,3.668 0.946,4.867 0.493,6.188C0.041,7.509 -0.103,8.916 0.072,10.3C0.551,14.24 3.676,17.504 7.59,18.165C8.919,18.393 10.282,18.324 11.581,17.965C12.881,17.605 14.085,16.962 15.107,16.083L15.487,16.477V17.588L21.47,23.567C22.047,24.144 22.99,24.144 23.567,23.567C24.144,22.991 24.144,22.048 23.567,21.471L17.598,15.478ZM9.152,15.478C5.647,15.478 2.817,12.65 2.817,9.147C2.817,5.644 5.647,2.816 9.152,2.816C12.657,2.816 15.487,5.644 15.487,9.147C15.487,12.65 12.657,15.478 9.152,15.478Z"
-        android:fillColor="@color/black" />
+  <path
+      android:pathData="M11.5,11.5m-9.5,0a9.5,9.5 0,1 1,19 0a9.5,9.5 0,1 1,-19 0"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#1C274C"/>
+  <path
+      android:pathData="M18.5,18.5L22,22"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#1C274C"
+      android:strokeLineCap="round"/>
 </vector>
